UI fix on smaller devices

--- a/src/index.css
+++ b/src/index.css
@@ -17,37 +17,34 @@
 
 /* #region Font faces */
 @font-face {
-  font-family: "Noto Serif JP";
-  src: url("./assets/fonts/noto-serif-jp-variable.ttf")
-    format("truetype-variations");
+  font-family: 'Noto Serif JP';
+  src: url('./assets/fonts/noto-serif-jp-variable.ttf') format('truetype-variations');
   font-weight: 100 900;
   unicode-range: U+3000-9FFF, U+ff??;
 }
 
 @font-face {
-  font-family: "Noto Sans JP";
-  src: url("./assets/fonts/noto-sans-jp-variable.ttf")
-    format("truetype-variations");
+  font-family: 'Noto Sans JP';
+  src: url('./assets/fonts/noto-sans-jp-variable.ttf') format('truetype-variations');
   font-weight: 100 900;
   unicode-range: U+3000-9FFF, U+ff??;
 }
 
 @font-face {
-  font-family: "Cormorant Infant";
-  src: local("CormorantInfant-Regular"),
-    url("./assets/fonts/cormorant-infant.ttf") format("truetype");
+  font-family: 'Cormorant Infant';
+  src: local('CormorantInfant-Regular'), url('./assets/fonts/cormorant-infant.ttf') format('truetype');
   font-weight: 400;
 }
 
 @font-face {
-  font-family: "Raleway";
-  src: url("./assets/fonts/raleway-variable.ttf") format("truetype-variations");
+  font-family: 'Raleway';
+  src: url('./assets/fonts/raleway-variable.ttf') format('truetype-variations');
   font-weight: 100 900;
 }
 /* #endregion */
 
 :root {
-  font-family: "Noto Sans JP", "Raleway", sans-serif;
+  font-family: 'Noto Sans JP', 'Raleway', sans-serif;
   font-size: 18px;
   line-height: 1.5;
   font-weight: 400;
@@ -72,22 +69,22 @@ body {
 }
 
 h1 {
-  font-family: "Noto Serif JP", "Cormorant Infant", serif;
-  font-size: clamp(40px, 50px, 7vmin);
+  font-family: 'Noto Serif JP', 'Cormorant Infant', serif;
+  font-size: clamp(35px, 45px, 7vmin);
   letter-spacing: 0.2em;
   font-weight: 200;
   line-height: 1.5em;
 }
 
 h2 {
-  font-family: "Noto Serif JP", "Cormorant Infant", serif;
+  font-family: 'Noto Serif JP', 'Cormorant Infant', serif;
   font-size: clamp(35px, 40px, 6vmin);
   font-weight: 400;
   line-height: 1.5em;
 }
 
 h6 {
-  font-family: "Noto Serif JP", "Cormorant Infant", serif;
+  font-family: 'Noto Serif JP', 'Cormorant Infant', serif;
   font-size: 22px;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -113,7 +110,7 @@ button {
 
 .pp {
   font-size: clamp(20px, 25px, 5vmin);
-  font-family: "Noto Serif", "Noto Serif JP", serif;
+  font-family: 'Noto Serif', 'Noto Serif JP', serif;
   letter-spacing: 0.2em;
   font-weight: 200;
   line-height: 2.2em;
